--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@mui/styled-engine-sc": "^6.4.6",
     "@tailwindcss/vite": "^4.0.14",
+    "@toolpad/core": "^0.13.0",
     "axios": "^1.8.3",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
@@ -18,6 +25,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.14",
     "zustand": "^5.0.3"
   },
