--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,22 @@
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/styled-engine-sc": "^6.4.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.14",
     "@toolpad/core": "^0.13.0",
     "axios": "^1.8.3",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
+    "motion": "^12.5.0",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "zustand": "^5.0.3"
   },
